GNOME Bugzilla – Bug 760702
gssdp-client: Fix GLib warning if host IP is not known
Last modified: 2019-02-22 09:29:53 UTC
Trivial patch attached.
Created attachment 319171 [details] [review] gssdp-client: Fix GLib warning if host IP is not known Prevent calling a GInetAddress constructor with a NULL IP address if the host IP could not be determined. (This is happening on my Linux system; I have not investigated the cause.)
Review of attachment 319171 [details] [review]: Interesting, wonder how that can happen. Anyway, nice catch.
Attachment 319171 [details] pushed as b8fdcc4 - gssdp-client: Fix GLib warning if host IP is not known