gssdp-client: Fix GLib warning if host IP is not known

Prevent calling a GInetAddress constructor with a NULL IP address if the
host IP could not be determined. (This is happening on my Linux system;
I have not investigated the cause.)

https://bugzilla.gnome.org/show_bug.cgi?id=760702